--- a/telenursing_web_gui/CMakeLists.txt
+++ b/telenursing_web_gui/CMakeLists.txt
@@ -160,6 +160,7 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
  catkin_install_python(PROGRAMS
    src/flask_to_joy.py
+   src/resize_and_repub.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
