--- a/telenursing_web_gui/CMakeLists.txt
+++ b/telenursing_web_gui/CMakeLists.txt
@@ -57,6 +57,7 @@ find_package(catkin REQUIRED COMPONENTS
  add_service_files(
    FILES
    changeStreamState.srv
+   homeRobotLeftArmReq.srv
 )
 
 ## Generate actions in the 'action' folder
